--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>máquina de escrever</title>
+    <title>Card com efeito hover</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Cutive+Mono&family=JetBrains+Mono:ital,wght@0,100;0,336;1,700&family=Share+Tech+Mono&family=Signika:wght@300&family=VT323&display=swap" rel="stylesheet">
