--- a/Dia20/index.html
+++ b/Dia20/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
     <meta charset="UTF-8"> 
-    <title>Cards que se expande</title>
+    <title>Carro se Movendo</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
