--- a/Dia28/index.html
+++ b/Dia28/index.html
@@ -13,43 +13,43 @@
         <ul>
           <li id="sliders-1" class="slide">
             <img src="imagens/10.jpg">
-            <a class="anterior" href="#sliders-10">anterior</a>
-            <a class="proxima" href="#sliders-2">proxima</a>
+            <a class="anterior" href="#sliders-10">Anterior</a>
+            <a class="proxima" href="#sliders-2">Próxima</a>
           </li>
           <li id="sliders-2" class="slide">
             <img src="imagens/4.jpg">
-            <a class="anterior" href="#sliders-1">anterior</a>
-            <a class="proxima" href="#sliders-3">proxima</a>           
+            <a class="anterior" href="#sliders-1">Anterior</a>
+            <a class="proxima" href="#sliders-3">Próxima</a>           
           </li>
           <li id="sliders-3" class="slide">
             <img src="imagens/6.jpg">
-            <a class="anterior" href="#sliders-2">anterior</a>
-            <a class="proxima" href="#sliders-4">proxima</a>           
+            <a class="anterior" href="#sliders-2">Anterior</a>
+            <a class="proxima" href="#sliders-4">Próxima</a>           
           </li>
           <li id="sliders-4" class="slide">
             <img src="imagens/12.jpg">
-            <a class="anterior" href="#sliders-3">anterior</a>
-            <a class="proxima" href="#sliders-5">proxima</a>          
+            <a class="anterior" href="#sliders-3">Anterior</a>
+            <a class="proxima" href="#sliders-5">Próxima</a>          
           </li>
           <li id="sliders-5" class="slide">
-            <img src="imagens/3.jpg"> 
-            <a class="anterior" href="#sliders-4">anterior</a> 
-            <a class="proxima" href="#sliders-6">proxima</a>
+            <img src="imagens/16.jpg"> 
+            <a class="anterior" href="#sliders-4">Anterior</a> 
+            <a class="proxima" href="#sliders-6">Próxima</a>
           </li>
           <li id="sliders-6" class="slide">
             <img src="imagens/5.jpg"> 
-            <a class="anterior" href="#sliders-5">anterior</a> 
-            <a class="proxima" href="#sliders-7">proxima</a>
+            <a class="anterior" href="#sliders-5">Anterior</a> 
+            <a class="proxima" href="#sliders-7">Próxima</a>
           </li>
           <li id="sliders-7" class="slide">
             <img src="imagens/14.jpeg"> 
-            <a class="anterior" href="#sliders-6">anterior</a> 
-            <a class="proxima" href="#sliders-8">proxima</a>
+            <a class="anterior" href="#sliders-6">Anterior</a> 
+            <a class="proxima" href="#sliders-8">Próxima</a>
           </li>
           <li id="sliders-8" class="slide">
             <img src="imagens/15.jpg"> 
-            <a class="anterior" href="#sliders-7">anterior</a> 
-            <a class="proxima" href="#sliders-1">proxima</a>
+            <a class="anterior" href="#sliders-7">Anterior</a> 
+            <a class="proxima" href="#sliders-1">Próxima</a>
           </li>
         </ul>
       </div>
