--- a/Dia30/index.html
+++ b/Dia30/index.html
@@ -9,11 +9,16 @@
   </head>
 <body>
   <div class="card">
+    <div class="cards" onclick="this.classList.toggle('expanded')"> 
     <div class="content">
       <h2>BATMAN</h2>
+      <input type="checkbox" name="page1" id="page1">
       <p>Batman é um personagem fictício, um super-herói da banda desenhada americana publicada pela DC Comics. Foi criado pelo escritor Bill Finger e pelo artista Bob Kane, e apareceu pela primeira vez na revista Detective Comics #27</p>
     </div>
+  
     <img src="batman.png" alt="">
+    </div>
+    
   </div>
 </body>
 </html>
